--- a/src/ynab_config.json
+++ b/src/ynab_config.json
@@ -1,5 +1,5 @@
 {
     "clientId": "Jj41xZ86nMbjs9d9GEr4816FpZhcnCfPk-W5kRybyjA",
-    "redirectUri2": "http://localhost:5173",
+    "redirectUri2": "http://localhost:5173/frequent-transactions/",
     "redirectUri": "https://tg2648.github.io/frequent-transactions/"
 }
