--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "sass": "^1.56.2",
     "svelte": "^3.52.0",
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "sveltestrap": "^5.10.0",
     "url": "^0.11.0",
     "ynab": "^1.32.0"
   }
