Add netlify functions

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "simple-oauth2": "^5.0.0",
     "sveltestrap": "^5.10.0",
     "url": "^0.11.0",
     "ynab": "^1.32.0"
